[metadata]
name = lsst-alert-database-ingester
version = 0.1.0
description = An ingestion worker for the Rubin Observatory alert database
url = https://github.com/lsst-dm/alert_database_ingester
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
python_requires = >= 3.8
install_requires =
    google-cloud-storage
    aiokafka
    avroc
    requests


tests_require =
    pytest

packages =
    alertingest
    alertingest.bin

[options.entry_points]
console_scripts =
    alertdb-ingester = alertingest.bin.alertdb_ingester:main
