[metadata]
name = lsst-alert-database-ingester
version = 0.1.0
description = An ingestion worker for the Rubin Observatory alert database
url = https://github.com/lsst-dm/alert_database_ingester
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
python_requires = >= 3.8
install_requires =
    google-cloud-storage
    aiokafka
    avroc>=0.3.1
    requests
    kafkit[aiohttp]==0.1.1

tests_require =
    pytest
    kafka-python
    lsst-alert-packet

[options.extras_require]
dev =
    pre-commit
    pytest
    mypy
    black
    flake8
    lsst-alert-packet
    kafka-python


packages =
    alertingest
    alertingest.bin

[options.entry_points]
console_scripts =
    alertdb-ingester = alertingest.bin.alertdb_ingester:main

[flake8]
max_line_length = 110
max_doc_length = 79
exclude =
    bin
    doc
    **/*/__init__.py
    **/*/version.py
    tests/.tests
ignore =
    E133
    E226
    E228
    W503

[isort]
profile = black

[mypy]
exclude = virtualenv*

[mypy-google.*]
ignore_missing_imports = True

[mypy-avroc.*]
ignore_missing_imports = True

[mypy-aiokafka]
ignore_missing_imports = True

[mypy-kafka.*]
ignore_missing_imports = True

[mypy-kafkit.*]
ignore_missing_imports = True

[mypy-lsst.*]
ignore_missing_imports = True
